--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,11 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.3.2 - 2023-02-22
+
+=== Fixed
+* Removed a workaround for ensuring stylesheets are loaded in an outdated version of WebKit.
+
 == 6.3.1 - 2022-12-06
 
 === Fixed
