DOC-1910: sanitizing-html-input-and-….adoc
Corrected heading level of Example sub-head.

--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -54,7 +54,7 @@ NOTE: `editor_security` is set to `true` by default. That is, {productname} spec
 
 *Possible values:* `+true+`, `+false+`
 
-=== Example: using `+editor_security+` to turn DOMPurify off and no longer sanitize HTML against XSS attacks
+===== Example: using `+editor_security+` to turn DOMPurify off and no longer sanitize HTML against XSS attacks
 
 [source,js]
 ----
