DOC-1915: browser-compatibility.adoc
Typo correction: s/}/)/.

--- a/modules/ROOT/partials/misc/browser-compatibility.adoc
+++ b/modules/ROOT/partials/misc/browser-compatibility.adoc
@@ -19,7 +19,7 @@
 |Chrome ESR (current version)  |{tick}  |{tick}  |{tick}
 |Firefox (current version)     |{tick}  |{tick}  |{tick}
 |Firefox (penultimate version) |60 days |60 days |60 days
-|Firefox ESR (current version} |{tick}  |{tick}  |{tick}
+|Firefox ESR (current version) |{tick}  |{tick}  |{tick}
 |Edge (current version)        |{tick}  |-       |-
 |Edge (penultimate version)    |{tick}  |-       |-
 |Safari (current version)      |-       |{tick}  |-
