DOC-1915: browser-compatibility.adoc
Added sub-head: Supported web browsers table.

This makes explicit what was previously implicit in the following sub-head.

--- a/modules/ROOT/partials/misc/browser-compatibility.adoc
+++ b/modules/ROOT/partials/misc/browser-compatibility.adoc
@@ -1,6 +1,6 @@
 // Note: The supportedwebbrowsers anchor is needed for older external links
 [[supported-web-browsers]]
-== [[supportedwebbrowsers]] Supported Web Browsers
+== [[supportedwebbrowsers]] Supported web browsers
 
 {productname} uses advanced JavaScript techniques to normalize inconsistencies among browsers to ensure a uniform user experience. The primary focus is on:
 
@@ -10,6 +10,8 @@
 * Apple Safari
 
 {productname} may not function as expected on unlisted browsers. Try out the {productname} examples on {companyurl} to determine any functional limitations of an unlisted browser.
+
+=== Supported web browsers table
 
 [cols=",^,^,^",options="header"]
 |===
