DOC-1910: sanitizing-html-input-and….adoc
Edited sample code again. This time to turn the function parameter into a name:value pair.

--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -60,9 +60,7 @@ NOTE: `xss_sanitization` is set to `true` by default. That is, {productname} spe
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  xss_sanitization: {
-    content: false
-  }
+  xss_sanitization: false
 });
 ----
 
