DOC-1913: admon-no-functionality-changes-in-….adoc
Copy edit: s/there/There/.

--- a/modules/ROOT/partials/misc/admon-no-functionality-changes-in-updated-server-side-components.adoc
+++ b/modules/ROOT/partials/misc/admon-no-functionality-changes-in-updated-server-side-components.adoc
@@ -1,1 +1,1 @@
-NOTE: there are no functionality changes in these updated server-side components.
+NOTE: There are no functionality changes in these updated server-side components.
