DOC-1913: 6.3.2-release-notes.adoc
Typo correction: s/issuess/issues/.

--- a/modules/ROOT/pages/6.3.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.3.2-release-notes.adoc
@@ -92,7 +92,7 @@ In {productname} 6.3, the onload event `error` that stopped stylesheets to load 
 [[security-fixes]]
 == Security fixes
 
-{productname} 6.3.2 includes fixes for the following security issuess:
+{productname} 6.3.2 includes fixes for the following security issues:
 
 All 3 server-side components have been updated to include dependency updates addressing the following security issues. 
 
