DOC-1913: 6.3.2-release-notes.adoc & 6.2-release-notes.adoc
Typo corrections: s/vnumtxt/6.3.2/ and s/vnumtxt/6.2/ respectively.

--- a/modules/ROOT/pages/6.3.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.3.2-release-notes.adoc
@@ -65,7 +65,7 @@ The new versions of the server-side services provide updates for the Java-based 
 
 include::partial$misc/supported-application-servers.adoc[]
 
-. Replace the existing server-side `.war` files with the `.war` files bundled with {productname} vnumtxt or later.
+. Replace the existing server-side `.war` files with the `.war` files bundled with {productname} 6.3.2 or later.
 
 For information on:
 
