--- a/modules/ROOT/pages/6.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.2-release-notes.adoc
@@ -187,7 +187,7 @@ The new versions of the server-side services provide updates for the Java-based 
 
 include::partial$misc/supported-application-servers.adoc[]
 
-. Replace the existing server-side `.war` files with the `.war` files bundled with {productname} vnumtxt or later.
+. Replace the existing server-side `.war` files with the `.war` files bundled with {productname} 6.2 or later.
 
 For information on:
 
